--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,12 +117,39 @@ main {
 
   img {
     width: 100%;
-    border: 3px #fff solid;
+    border: 3px $secondary-color solid;
+    background-color: rgba(lighten($color: #fff, $amount: 5), 0.5);
 
     &:hover {
       opacity: 0.5;
-      border-color: $secondary-color;
+      border-color: #333;
       @include easeOut;
+    }
+  }
+}
+
+// Contact Page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
     }
   }
 }
